--- a/src/main/webapp/app/entities/item/items.html
+++ b/src/main/webapp/app/entities/item/items.html
@@ -120,13 +120,13 @@
                                     <span class="glyphicon glyphicon-eye-open"></span>
                                     <span class="hidden-xs hidden-sm" data-translate="entity.action.view"></span>
                                 </button>
-                                <button type="submit"
+                                <button type="submit" has-authority="ROLE_ADMIN"
                                         ui-sref="item.edit({id:item.id})"
                                         class="btn btn-primary btn-sm">
                                     <span class="glyphicon glyphicon-pencil"></span>
                                     <span class="hidden-xs hidden-sm" data-translate="entity.action.edit"></span>
                                 </button>
-                                <button type="submit"
+                                <button type="submit" has-authority="ROLE_ADMIN"
                                         ui-sref="item.delete({id:item.id})"
                                         class="btn btn-danger btn-sm">
                                     <span class="glyphicon glyphicon-remove-circle"></span>
