--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -184,6 +184,12 @@
     <script src="app/entities/category/category.state.js"></script>
     <script src="app/entities/category/category.service.js"></script>
     <script src="app/entities/category/category.controller.js"></script>
+    <script src="app/entities/bookmark/bookmark-dialog.controller.js"></script>
+    <script src="app/entities/bookmark/bookmark-detail.controller.js"></script>
+    <script src="app/entities/bookmark/bookmark-delete-dialog.controller.js"></script>
+    <script src="app/entities/bookmark/bookmark.state.js"></script>
+    <script src="app/entities/bookmark/bookmark.service.js"></script>
+    <script src="app/entities/bookmark/bookmark.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
